# grageng

./: .env.example  .gitignore  README-zh.md  README.md  pyproject.toml  requirements.txt  requirments.txt
examples/: test.py
grageng/: main.py
grageng/api/routers/: health.py
grageng/clients/: base.py  embedding.py  llm.py
grageng/models/: chunk.py  document.py  entity.py  named.py  relationship.py  types.py
grageng/storage/graph_db/: base.py  networkx_impl.py
grageng/storage/kv_db/: file_pipeline_storage.py  memory.py  memory_pipeline_storage.py  operator.py
grageng/storage/vector_db/: base.py  lancedb.py
grageng/utils/: log.py
graph/models/: chunk.py
